    if present, use libid3 to read ID tags
    Fixed problem with player a/v sync when relaying through DSS
    Added input video filters to mp4live
    Added plugins for libac3 and libmpeg2 (must be installed before configuration)
    Fixed sync flag indication for mp4creator using avi files.
    Changed PACKAGE and VERSION for mpeg4ip to MPEG4IP_PACKAGE and
      MPEG4IP_VERSION

12/23/03 version 1.0
    Fix incorrect timestamp on mpeg1/2 insert into mp4 file.
    Allow iTunes \0\0\0\0 atom
    Fix modal aspects of mp4live dialogs
    Added several things to README
    Fixed configuration for several different systems

11/20/03 version 1.0RC3
    Fixed compilation on SuSE 9.0 personal
    Added compatibility code for large files and Quicktime local playback
    Read aspect ratio in player for mpeg1/2/4 and set correctly

11/04/03 version 1.0RC2
    Fixed V4L2 missing parameter to VIDIOC_QBUF parameter for 2.6 kernel
    Fixed timestamp problem in mpeg1 reception - fix IPBPBP problem
    Fixed fragmentation problem in RFC 3119 reception
    Fixed profile/level problem in VOL header in mp4live
    Added xvid decoding on simple tools indicated in VOL header

10/23/03 version 1.0RC1
    Fixed non-compliance in mp4live created ISMA files with 0 length frames
    Updated profile @ level defines for audio and video
    Added V4L2 support for mp4live
    Fixed audio/video longterm lipsync problems in mp4live
    Added support for ffmpeg encoder
    Added support for released verions of xvid and faac encoders
    User fixes for several areas - porting and others
    ISO decoder speed up by Richard Chen
    Support for iTunes metadata

07/03/03 Version 0.9.9
    Added H.261 encoding for mp4live
    Fixes from April ISMA plugfest
    Minor fixes to mp4live
    Build fixes for Solaris

03/05/03 Version 0.9.8
    Several changes from ISMA plugfest in IOD and RTSP.
    Fixed audio/video sync problem in mp4live, plus some other problems
       with audio destination.