@@ -13,7 +13,7 @@ endif
 endif
 
 EXTRA_DIST = bootstrap cvs_bootstrap encoding60.dsw README_FIRST strip_fPIC.sh depcomp README.html patch.osx faac_mpeg4ip_add.tar mp4liveOnDebian.FAQ \
-mac_build_libs mac_build_tools
+mac_build_lib mac_build_tools
 
 include_HEADERS = mpeg4ip_config.h
 
