@@ -8,7 +8,7 @@ dnl Detect the canonical host and target build environment
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 
-AM_INIT_AUTOMAKE(mpeg4ip, 1.0.7)
+AM_INIT_AUTOMAKE(mpeg4ip, 1.0.8)
 
 dnl Checks for programs. 
 
