@@ -1,2 +1,2 @@
 #define MPEG4IP_PACKAGE "mpeg4ip"
-#define MPEG4IP_VERSION "1.0.7"
+#define MPEG4IP_VERSION "1.0.8"
