@@ -5,5 +5,5 @@ INCLUDES=-I$(top_srcdir)/include
 libavi_la_SOURCES = avilib.c \
 	avilib.h
 
-EXTRA_DIST = libavi_st60.dsp libavi60.dsp
+EXTRA_DIST = libavi_st60.dsp libavi60.dsp avi.xcode/project.pbxproj
 
