@@ -10,7 +10,8 @@ libmpeg4ip_gnu_la_SOURCES = \
 	strcasestr.h
 
 EXTRA_DIST = libmissing60.dsp \
-	need_for_win32.c
+	need_for_win32.c \
+	gnu.xcode/project.pbxproj
 
 AM_CFLAGS = -D_REENTRANT -Werror -Wall -Wcast-align -Wstrict-prototypes -Wmissing-prototypes
 
