@@ -127,4 +127,5 @@ EXTRA_DIST = API_CHANGES \
 	INTERNALS \
 	libmp4v260.dsp \
 	libmp4v2_st60.dsp \
-	TODO
+	TODO \
+	libmp4v2.xcode/project.pbxproj
