@@ -26,4 +26,4 @@ mp4tags_LDADD = $(top_builddir)/lib/mp4v2/libmp4v2.la \
 	$(top_builddir)/lib/gnu/libmpeg4ip_gnu.la
 
 EXTRA_DIST = mp4dump60.dsp mp4extract60.dsp \
-	mp4info.dsp
+	mp4info.dsp mp4tools.xcode/project.pbxproj
