@@ -5,6 +5,7 @@ libmpeg2_transport_la_SOURCES = \
 	mpeg2t_ac3.c \
 	mpeg2t_mp3.c \
 	mpeg2t_private.h \
+	mpeg2t_defines.h \
 	mpeg2t_video.c \
 	mpeg2t_util.c 
 if HAVE_A52DEC_LIB
@@ -27,3 +28,5 @@ mpeg2t_test_LDADD = libmpeg2_transport.la \
 	$(top_builddir)/lib/mp4av/libmp4av.la \
 	$(top_builddir)/lib/mp4v2/libmp4v2.la \
 	@SDL_LIBS@ -lSDLMain
+
+EXTRA_DIST= libmpeg2t.xcode/project.pbxproj
